--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="contact-container">
                 <h3>Interested in Suwate26.com?</h3>
                 <p class="contact-subtitle">Choose your preferred method to contact us</p>
-                <p class="contact-email">📧 <a href="mailto:dlokeshchand96@gmail.com?subject=Domain%20Inquiry%3A%20Suwate26.com&body=Hello%2C%0A%0AI%20am%20interested%20in%20purchasing%20the%20domain%20Suwate26.com.%0A%0AMy%20offer%3A%20%0A%0APlease%20let%20me%20know%20the%20next%20steps.%0A%0AThank%20you%2C">dlokeshchand96@gmail.com</a></p>
+                <p class="contact-email">📧 <a href="mailto:dlokeshchand96@gmail.com?subject=Domain%20Inquiry%3A%20Suwate26.com&body=Hello%2C%0A%0AI%20am%20interested%20in%20purchasing%20the%20domain%20Suwate26.com.%0A%0APlease%20let%20me%20know%20the%20next%20steps.%0A%0AThank%20you%2C">dlokeshchand96@gmail.com</a></p>
                 
                 <div class="email-buttons">
                     <button class="btn btn-primary" onclick="sendEmailGmail()">
